infra/k8s/non-persistent/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # image: otsili/frontend
          image: otsili/frontend_v1
          imagePullPolicy: IfNotPresent
          ports:
            # - containerPort: 80
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  type: LoadBalancer
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      # targetPort: 80
      targetPort: 4200
        # targetPort: 80
    - name: https-frontend
      protocol: TCP
      port: 443
      targetPort: 4200
      # targetPort: 443
  selector:
    app: frontend
