infra/k8s/non-persistent/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '600m'
    nginx.org/client-max-body-size: '600m'
     nginx.ingress.kubernetes.io/rewrite-target: /$2
    # ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # tls:
  #   - hosts:
  #       - milms.tech
  #       - www.milms.tech
  #     secretName: milms-tech
  rules:
    - host: milms.tech
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/courses/?(.*)
            pathType: Prefix
            backend:
              service:
                name: courses-srv
                port:
                  number: 3000
          # - path: /api/vtc/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: vtc-srv
          #       port:
          #         number: 3000
          # - path: /api/jitsi-meet/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: web
          #       port:
          #         number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  # number: 80
                  number: 4200
    - host: www.milms.tech
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/courses/?(.*)
            pathType: Prefix
            backend:
              service:
                name: courses-srv
                port:
                  number: 3000
          # - path: /api/vtc/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: vtc-srv
          #       port:
          #         number: 3000
          # - path: /api/jitsi-meet/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: web
          #       port:
          #         number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  # number: 80
                  number: 4200
